ADD : Disconnect (/deconnexion) ~endpoints names
